--- a/Movie_project/films/templates/films/layoute.html
+++ b/Movie_project/films/templates/films/layoute.html
@@ -19,10 +19,13 @@
                 </div>
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'films' %}">Главная</a>
+                        <a class="nav-link active" href="{% url 'add_films' %}">Главная</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'new_films' %}">Второстепенная</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'films' %}">Страница с фильмами</a>
                     </li>
                 </ul>
             </aside>
