--- a/Movie_project/films/templates/films/index.html
+++ b/Movie_project/films/templates/films/index.html
@@ -1,7 +1,7 @@
 {% extends 'films/layoute.html' %}
 
 {% block title %}
-    <title>Первая страница на django</title>
+    Первая страница на djangoitle>
 {% endblock %}
 
 {% block content%}
