--- a/Movie_project/admin_pan/templates/admin_pan/news.html
+++ b/Movie_project/admin_pan/templates/admin_pan/news.html
@@ -1,19 +1,30 @@
 {% extends 'films/layoute.html' %}
 
 {% block title %}
-    <title> Страница с фильмами </title>
+    Страница с фильмами
 {% endblock %}
 
-{% block content%}
+{% block content %}
 
-    <h1>Фильмы</h1>
+<h1>Фильмы</h1>
 
-
+{% if films %}
     {% for film in films %}
-        <h2>{{ film.title }}</h2>
-        <p>{{ film.short_description }}</p>
-        <p>{{ film.text }}</p>
-        <p>{{ film.pub_date }}</p>
+        <div class="card" style="width: 30rem;">
+            <!-- Используйте значение из film.image_url для источника изображения -->
+            <img src="{{ film.image_url }}" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">{{ film.title }}</h5>
+                <p class="card-text">{{ film.short_description }}</p>
+                <p class="card-text">{{ film.text }}</p>
+                <p class="card-text">{{ film.pub_date }}</p>
+                <!-- Используйте значение из film.video_url для ссылки -->
+                <a href="{{ film.video_url }}" class="btn btn-primary" target="_blank">Посмотреть фильм</a>
+            </div>
+        </div>
     {% endfor %}
+{% else %}
+    <p>Фильмов ещё нет</p>
+{% endif %}
 
 {% endblock %}
