--- a/Movie_project/films/templates/films/layoute.html
+++ b/Movie_project/films/templates/films/layoute.html
@@ -27,6 +27,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'films' %}">Страница с фильмами</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'add_film' %}">Добавить фильм</a>
+                    </li>
                 </ul>
             </aside>
             <main class="col-md-9">
