--- a/Movie_project/films/templates/films/new.html
+++ b/Movie_project/films/templates/films/new.html
@@ -1,7 +1,7 @@
 {% extends 'films/layoute.html' %}
 
 {% block title %}
-    <title>Вторая страничка </title>
+    Вторая страничка
 {% endblock %}
 
 {% block content%}
