--- a/Movie_project/films/templates/films/layoute.html
+++ b/Movie_project/films/templates/films/layoute.html
@@ -18,12 +18,12 @@
                     <h3 class="mt-2">kino</h3>
                 </div>
                 <ul class="nav flex-column">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'add_films' %}">Главная</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'new_films' %}">Второстепенная</a>
-                    </li>
+<!--                    <li class="nav-item">-->
+<!--                        <a class="nav-link active" href="{% url 'add_films' %}">Главная</a>-->
+<!--                    </li>-->
+<!--                    <li class="nav-item">-->
+<!--                        <a class="nav-link" href="{% url 'new_films' %}">Второстепенная</a>-->
+<!--                    </li>-->
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'films' %}">Страница с фильмами</a>
                     </li>
